# Fully-Homomorphic-Image-Processing

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  install.sh  packages.txt  run.sh
benchmark/: analyze.py  benchmark.py  decode.py  results.txt  results_parser.py  run.sh
homo/: Makefile  client.cpp  client_decode.cpp  client_jpeg.cpp  client_resize.cpp  dct.cpp  encode.cpp  fhe_decode.h  fhe_image.h  fhe_resize.h  image_test.cpp  jpge.cpp  parameters.cpp  raymond.cpp  reciever.cpp  sender.cpp  server.cpp  server_decode.cpp  server_jpeg.cpp  server_resize.cpp  test.cpp
image/: ImageInput.ipynb  ResultsView.ipynb  kung.txt  newkung.txt
image/.ipynb_checkpoints/: ImageInput-checkpoint.ipynb
include/: jo_jpeg.h
logs/: test_10_10_0_0_0.txt  test_20_20_0_0_0.txt  test_30_30_0_0_0.txt
tests/: test_decode.cpp
translate/: CodeTranslation.ipynb  Untitled.ipynb  test.c  test.py  test4.py  translate.py  translate_test.py
